# customer-review-insights

./: README.md  config.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt
services/: database.py  llm_gateway.py
